--- a/Simulations/popvar_pop_size_simulation.Rmd
+++ b/Simulations/popvar_pop_size_simulation.Rmd
@@ -28,8 +28,6 @@ proj_dir <- "C:/Users/Jeff/Google Drive/Barley Lab/Projects/PopVarVal"
 
 sim_dir <- file.path(proj_dir, "Simulations")
 
-# Is this MSI?
-MSI <- TRUE
 
 ```
 
@@ -92,7 +90,7 @@ param_df <- expand.grid(herit = herit, nQTL = nQTL, n_ind = n_ind, iter = seq(n_
 # Detect cores
 n_cores <- detectCores()
 
-# Split the data.frame
+# Split the data.frame by the number of cores
 df_split <- split(x = param_df, f = sort(rep_len(x = seq(n_cores), length.out = nrow(param_df))))
 
 
@@ -325,8 +323,7 @@ sim_results <- mclapply(X = df_split, FUN = function(df) {
 
   
 # Save the output
-save("sim_results", "simulation_results.RData")
-
+save("sim_results", file = "simulation_results.RData")
 
 ```
 
@@ -341,14 +338,67 @@ We will perform pairwise correlations between:
 
 ```{r}
 
-# # Remove NULLs
-# results_nonull <- results[!sapply(results, is.null)]
-# 
-# # Perform pairwise correlations
-# varG_acc <- results_nonull %>% 
-#   map(mutate_at, .cols = -1:-2, .funs = funs(as.numeric(as.matrix(.)))) %>% 
-#   map(select, varG_hat, V_G_true, pred.varG) %>% 
-#   map(cor)
+# Load simulation results
+results_file <- "simulation_results.RData"
+load(results_file)
+
+# Combine the split data.frame with the results list
+## Note this will be correcte in the future
+df_results <- mapply(df_split, sim_results, FUN = function(df, results)
+  df %>% mutate(results = I(results)), SIMPLIFY = F)
+
+# Bind rows
+df_results1 <- df_results %>%
+  bind_rows() %>%
+  as_tibble()
+
+# Define function for mutating
+summarize_cor <- function(x) {
+  # Correlate, extract names, unlist
+  V_G_cor <- select(x, varG_hat, pred.varG, V_G_true) %>% cor()
+  V_G_cor_names <- combn(x = colnames(V_G_cor), m = 2, FUN = str_c, collapse = "_")
+  V_G_cor1 <- V_G_cor[upper.tri(V_G_cor)]
+  names(V_G_cor1) <- V_G_cor_names
+  
+  mu_cor <- select(x, mu, pred.mu) %>% cor()
+  mu_cor_names <- combn(x = colnames(mu_cor), m = 2, FUN = str_c, collapse = "_")
+  mu_cor1 <- mu_cor[upper.tri(mu_cor)]
+  names(mu_cor1) <- mu_cor_names
+  
+  mu_sp_cor <- select(x, mu_sp, mu.sp_high) %>% cor()
+  mu_sp_cor_names <- combn(x = colnames(mu_sp_cor), m = 2, FUN = str_c, collapse = "_")
+  mu_sp_cor1 <- mu_sp_cor[upper.tri(mu_sp_cor)]
+  names(mu_sp_cor1) <- mu_sp_cor_names
+  
+  list(c(V_G_cor1, mu_cor1, mu_sp_cor1))
+}
+  
+
+# Iterate over all rows and calculate the correlation between observed, predicted, and true
+# V_G and mu_sp
+df_results2 <- df_results1 %>% 
+  rowwise() %>% 
+  mutate(results = summarize_cor(results)) %>%
+  # Add names
+  mutate(param = list(names(results))) %>% 
+  unnest()
+  
+# Group and summarize
+df_results_summ <- df_results2 %>% 
+  group_by(herit, nQTL, n_ind, param) %>% 
+  summarize(param_mean = mean(results), param_sd = sd(results))
+
+# Plot
+df_results_summ %>%
+  ggplot(mapping = aes(x = n_ind, y = param_mean, group = herit, col = as.factor(herit), 
+                       pch = as.factor(herit))) +
+  geom_point(size = 2) +
+  geom_line(size = 1) +
+  geom_errorbar(aes(x = n_ind, ymin = param_mean - param_sd, ymax = param_mean + param_sd),
+                width = 10) +
+  facet_grid(nQTL ~ param) 
+
+    
 
 
 ```
